--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -317,6 +317,15 @@ template {
 [hidden] {
   display: none; }
 
+.button {
+  padding: 13px 20px;
+  border: none;
+  border-radius: 2px;
+  text-transform: uppercase; }
+  .button--primary {
+    background-color: #e3b873;
+    color: #ffffff; }
+
 .container {
   max-width: 1256px;
   margin: auto; }
@@ -346,14 +355,31 @@ template {
 .contacts__phone {
   margin-right: 45px; }
 
-.button {
-  padding: 13px 20px;
-  border: none;
-  border-radius: 2px;
-  text-transform: uppercase; }
-  .button--primary {
-    background-color: #e3b873;
-    color: #ffffff; }
+.hero {
+  position: relative;
+  background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
+  height: 100vh;
+  color: #ffffff; }
+  .hero__instagram {
+    position: absolute;
+    left: 0;
+    top: 0;
+    max-width: 80px;
+    height: 100%; }
+
+.instagram {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #131313; }
+  .instagram__link {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #e3b873;
+    transform: rotate(90deg); }
+
+.title {
+  margin: 0; }
 
 body {
   font-family: 'Futura Book', sans-serif;
