--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -357,6 +357,18 @@ template {
   display: none;
 }
 
+.button {
+  padding: 13px 20px;
+  border: none;
+  border-radius: 2px;
+  text-transform: uppercase;
+}
+
+.button--primary {
+  background-color: #e3b873;
+  color: #ffffff;
+}
+
 .container {
   max-width: 1256px;
   margin: auto;
@@ -399,16 +411,44 @@ template {
   margin-right: 45px;
 }
 
-.button {
-  padding: 13px 20px;
-  border: none;
-  border-radius: 2px;
-  text-transform: uppercase;
+.hero {
+  position: relative;
+  background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
+  height: 100vh;
+  color: #ffffff;
 }
 
-.button--primary {
-  background-color: #e3b873;
-  color: #ffffff;
+.hero__instagram {
+  position: absolute;
+  left: 0;
+  top: 0;
+  max-width: 80px;
+  height: 100%;
+}
+
+.instagram {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #131313;
+}
+
+.instagram__link {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #e3b873;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.title {
+  margin: 0;
 }
 
 body {
