--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -450,6 +450,10 @@ template {
   max-width: 500px;
 }
 
+.hero__button {
+  margin-right: 20px;
+}
+
 .hero__instagram {
   position: absolute;
   left: 0;
