--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -416,7 +416,8 @@ template {
   margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
-  font-size: 40px; }
+  font-size: 40px;
+  font-weight: normal; }
   .title--primary {
     color: #e3b873; }
 
