--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -509,6 +509,7 @@ template {
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
   font-size: 40px;
+  font-weight: 400;
 }
 
 .title--primary {
