--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -322,9 +322,15 @@ template {
   border: none;
   border-radius: 2px;
   text-transform: uppercase; }
+  .button:hover {
+    cursor: pointer; }
   .button--primary {
     background-color: #e3b873;
-    color: #ffffff; }
+    color: #ffffff;
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
+    transition: box-shadow 0.3s; }
+    .button--primary:hover {
+      box-shadow: none; }
   .button--outline {
     border: 1px solid #FFFFFF;
     background-color: transparent;
@@ -374,8 +380,15 @@ template {
   background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
   height: 100vh;
   color: #ffffff; }
+  .hero::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(19, 19, 19, 0.7); }
   .hero__content {
-    max-width: 670px; }
+    max-width: 670px;
+    position: relative; }
   .hero__text {
     font-size: 22px;
     max-width: 500px; }
@@ -400,24 +413,41 @@ template {
     text-transform: uppercase;
     color: #ffffff;
     text-decoration: none; }
+    .hero__scroll-down::after {
+      content: '';
+      background: url("../img/scroll-down.svg") no-repeat center;
+      width: 30px;
+      height: 30px;
+      border: 1px solid #e3b873;
+      border-radius: 50%;
+      margin-left: 12px; }
 
 .instagram {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   background-color: #131313; }
   .instagram__link {
+    display: flex;
+    align-items: center;
+    line-height: 0.8;
     text-transform: uppercase;
     text-decoration: none;
     color: #e3b873;
     transform: rotate(90deg); }
+    .instagram__link::after {
+      content: '';
+      width: 51px;
+      height: 1px;
+      background-color: #e3b873;
+      margin-left: 8px; }
 
 .title {
   margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
   font-size: 40px;
-  font-weight: normal; }
+  font-weight: 400; }
   .title--primary {
     color: #e3b873; }
 
