--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -364,9 +364,24 @@ template {
   text-transform: uppercase;
 }
 
+.button:hover {
+  cursor: pointer;
+}
+
 .button--primary {
   background-color: #e3b873;
   color: #ffffff;
+  -webkit-box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
+          box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
+  -webkit-transition: -webkit-box-shadow 0.3s;
+  transition: -webkit-box-shadow 0.3s;
+  transition: box-shadow 0.3s;
+  transition: box-shadow 0.3s, -webkit-box-shadow 0.3s;
+}
+
+.button--primary:hover {
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .button--outline {
@@ -441,8 +456,17 @@ template {
   color: #ffffff;
 }
 
+.hero::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(19, 19, 19, 0.7);
+}
+
 .hero__content {
   max-width: 670px;
+  position: relative;
 }
 
 .hero__text {
@@ -483,13 +507,23 @@ template {
   text-decoration: none;
 }
 
+.hero__scroll-down::after {
+  content: '';
+  background: url("../img/scroll-down.svg") no-repeat center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #e3b873;
+  border-radius: 50%;
+  margin-left: 12px;
+}
+
 .instagram {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -497,11 +531,26 @@ template {
 }
 
 .instagram__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 0.8;
   text-transform: uppercase;
   text-decoration: none;
   color: #e3b873;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+}
+
+.instagram__link::after {
+  content: '';
+  width: 51px;
+  height: 1px;
+  background-color: #e3b873;
+  margin-left: 8px;
 }
 
 .title {
