--- a/practice/src/sass/templates/_hero.sass
+++ b/practice/src/sass/templates/_hero.sass
@@ -7,8 +7,15 @@
   background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
   height: 100vh
   color: $light
+  &::before
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    background-color: rgba($dark, 0.7);
   &__content
     max-width: 670px
+    position: relative
   &__text
     font-size: 22px
     max-width: 500px
@@ -33,16 +40,35 @@
     text-transform: uppercase
     color: $light 
     text-decoration: none
+    &::after
+      content: ''
+      background: url('../img/scroll-down.svg') no-repeat center
+      width: 30px
+      height: 30px
+      border: 1px solid $primary
+      border-radius: 50%
+      margin-left: 12px
 .instagram
   display: flex
-  justify-content: space-between
+  justify-content: center
   align-items: center
   background-color: $dark
   &__link
+    display: flex
+    align-items: center
+    line-height: 0.8
     text-transform: uppercase
     text-decoration: none
     color: $primary
     transform: rotate(90deg)
+    &::after
+      content: ''
+      width: 51px
+      height: 1px
+      background-color: $primary
+      margin-left: 8px
+
+
 .title
   margin: 0
   font-family: 'Yeseva One', cursive;
