--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -362,9 +362,13 @@ template {
           box-sizing: border-box;
 }
 
+html {
+  font-size: 14px;
+}
+
 body {
   font-family: 'Futura Book', sans-serif;
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .section-title {
@@ -398,6 +402,7 @@ body {
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
+  font-size: 0.93rem;
 }
 
 .button:hover {
@@ -463,7 +468,9 @@ body {
   color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
-  margin-right: 40px;
+  margin-right: 2.85rem;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
 }
 
 .phone {
@@ -503,12 +510,13 @@ body {
 }
 
 .hero__content {
-  max-width: 670px;
+  max-width: 42.85rem;
   position: relative;
+  margin-left: 4.28rem;
 }
 
 .hero__text {
-  font-size: 22px;
+  font-size: 1.57rem;
   max-width: 500px;
 }
 
@@ -537,8 +545,8 @@ body {
           align-items: center;
   left: 0;
   bottom: 0;
-  min-width: 247px;
-  min-height: 97px;
+  min-width: 17.6rem;
+  min-height: 6.92rem;
   background-color: #131313;
   text-transform: uppercase;
   color: #ffffff;
@@ -595,11 +603,67 @@ body {
   margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 2.657rem;
   font-weight: 400;
 }
 
 .title--primary {
   color: #e3b873;
+}
+
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 12px;
+  }
+  .nav__item {
+    margin-right: 1rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .nav {
+    display: none;
+  }
+  .hero__instagram {
+    display: none;
+  }
+  .hero__content {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .contacts__phone {
+    margin-right: 0;
+    color: #ffffff;
+    text-decoration: none;
+  }
+  .contacts__button {
+    display: none;
+  }
+  .title {
+    font-size: 1.64rem;
+  }
+  .hero__scroll-down {
+    display: none;
+  }
+  .hero__content {
+    max-width: 22.86rem;
+  }
+  .hero__text {
+    font-size: 1.29rem;
+    margin-bottom: 2.28rem;
+  }
+  .hero__button {
+    display: block;
+    min-width: 22.86rem;
+    margin-bottom: 1.85rem;
+  }
+}
+
+@media screen and (max-height: 520px) {
+  .hero__scroll-down {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
