--- a/practice/src/sass/templates/_header.sass
+++ b/practice/src/sass/templates/_header.sass
@@ -18,7 +18,8 @@
     color: $light
     text-decoration: none
     text-transform: uppercase
-    margin-right: 40px
+    margin-right:  2.85rem
+    transition: color 0.2s
 .phone
   color: $primary
 .contacts
