--- a/practice/src/sass/templates/_hero.sass
+++ b/practice/src/sass/templates/_hero.sass
@@ -16,10 +16,11 @@
     height: 100%
     background-color: rgba($dark, 0.7);
   &__content
-    max-width: 670px
+    max-width: 42.85rem
     position: relative
+    margin-left: 4.28rem
   &__text
-    font-size: 22px
+    font-size: 1.57rem
     max-width: 500px
   &__button
     margin-right: 20px
@@ -36,8 +37,8 @@
     align-items: center
     left: 0
     bottom: 0
-    min-width: 247px
-    min-height: 97px
+    min-width: 17.6rem
+    min-height: 6.92rem
     background-color: $dark
     text-transform: uppercase
     color: $light 
@@ -75,7 +76,7 @@
   margin: 0
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase
-  font-size: 40px
+  font-size: 2.657rem
   font-weight: 400
   &--primary
     color: $primary
