--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -398,7 +398,7 @@ body {
 }
 
 .button {
-  padding: 13px 20px;
+  padding: 11px 24px;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
@@ -462,13 +462,18 @@ body {
 .logo {
   color: #e3b873;
   text-transform: uppercase;
+  font-size: 1.075rem;
+}
+
+.nav {
+  margin-left: 19px;
 }
 
 .nav__item {
   color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
-  margin-right: 2.85rem;
+  margin-right: 2.6rem;
   -webkit-transition: color 0.2s;
   transition: color 0.2s;
 }
@@ -515,13 +520,23 @@ body {
   margin-left: 4.28rem;
 }
 
+.hero__title {
+  margin-bottom: 0rem;
+}
+
 .hero__text {
   font-size: 1.57rem;
   max-width: 500px;
+  line-height: 140%;
+  margin-top: 1.1rem;
+  margin-bottom: 2.9rem;
 }
 
 .hero__button {
-  margin-right: 20px;
+  min-width: 207px;
+  margin-right: 17px;
+  padding: 19px;
+  letter-spacing: 0.2px;
 }
 
 .hero__instagram {
@@ -548,6 +563,9 @@ body {
   min-width: 17.6rem;
   min-height: 6.92rem;
   background-color: #131313;
+  font-family: 'Yeseva One', cursive;
+  font-size: 0.865rem;
+  letter-spacing: 0px;
   text-transform: uppercase;
   color: #ffffff;
   text-decoration: none;
@@ -560,7 +578,7 @@ body {
   height: 30px;
   border: 1px solid #e3b873;
   border-radius: 50%;
-  margin-left: 12px;
+  margin-left: 18px;
 }
 
 .instagram {
@@ -584,6 +602,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   line-height: 0.8;
+  font-size: 1.1rem;
   text-transform: uppercase;
   text-decoration: none;
   color: #e3b873;
@@ -600,11 +619,12 @@ body {
 }
 
 .title {
-  margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
-  font-size: 2.657rem;
+  font-size: 2.82rem;
   font-weight: 400;
+  line-height: 1.4;
+  letter-spacing: 0.2px;
 }
 
 .title--primary {
