--- a/practice/src/sass/templates/_hero.sass
+++ b/practice/src/sass/templates/_hero.sass
@@ -19,11 +19,21 @@
     max-width: 42.85rem
     position: relative
     margin-left: 4.28rem
+  &__title
+    margin-bottom: 0rem
   &__text
     font-size: 1.57rem
     max-width: 500px
+    line-height: 140%
+    margin-top: 1.1rem
+    margin-bottom: 2.9rem
   &__button
-    margin-right: 20px
+    min-width: 207px
+    margin-right: 17px
+    padding: 19px
+    letter-spacing: 0.2px
+    &--second
+      // padding-left: 0px
   &__instagram
     position: absolute
     left: 0
@@ -40,6 +50,9 @@
     min-width: 17.6rem
     min-height: 6.92rem
     background-color: $dark
+    font-family: 'Yeseva One', cursive
+    font-size: 0.865rem
+    letter-spacing: 0px
     text-transform: uppercase
     color: $light 
     text-decoration: none
@@ -50,7 +63,7 @@
       height: 30px
       border: 1px solid $primary
       border-radius: 50%
-      margin-left: 12px
+      margin-left: 18px
 .instagram
   display: flex
   justify-content: center
@@ -60,6 +73,7 @@
     display: flex
     align-items: center
     line-height: 0.8
+    font-size: 1.1rem
     text-transform: uppercase
     text-decoration: none
     color: $primary
@@ -73,10 +87,12 @@
 
 
 .title
-  margin: 0
-  font-family: 'Yeseva One', cursive;
+  // margin: 0
+  font-family: 'Yeseva One', cursive
   text-transform: uppercase
-  font-size: 2.657rem
+  font-size: 2.82rem
   font-weight: 400
+  line-height: 1.4
+  letter-spacing: 0.2px
   &--primary
     color: $primary
