add: section types and design

--- a/practice/src/sass/_settings.sass
+++ b/practice/src/sass/_settings.sass
@@ -5,11 +5,22 @@ html
 body 
   font-family: 'Futura Book', sans-serif
   font-size: 1rem
+img 
+  max-width: 100%
 .section
+  padding: 60px 0
   &-title
     text-align: center
-    text-transform: uppercase
-    font-family: 'Yeseva one', cursive
+    &__heading
+      text-transform: uppercase
+      font-family: 'Yeseva one', cursive
+    &__description
+      max-width: 52rem
+      margin: auto
+      margin-top: 1.64rem
+      font-family: 'Futura Book' , arial
+      font-size: 1.07rem
+      line-height: 135.84%
     &__image
       display: flex
       justify-content: center
