--- a/practice/src/sass/_media.sass
+++ b/practice/src/sass/_media.sass
@@ -14,6 +14,19 @@
     &__content
       margin-left: 0
 @media screen and ( max-width: 570px )
+  .row
+    flex-direction: column
+    align-items: center
+  .types
+    &__card
+      margin-bottom: 5rem
+  .card
+    &__text
+      margin-left: 0
+  .section
+    &-title
+      &__description
+      max-width: 21.86rem
   .contacts
     &__phone
       margin-right: 0
@@ -35,8 +48,18 @@
       display: block
       min-width: 22.86rem
       margin-bottom: 1.85rem
+  .design
+    background-color: $dark
+    &__section-title
+      color: $light 
+    &__card
+      margin-bottom: 5.7rem
+
 @media screen and ( max-height: 520px )
   .hero
     &__scroll-down
       display: none
-  
+
+
+ 
+
