--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -371,10 +371,30 @@ body {
   font-size: 1rem;
 }
 
+img {
+  max-width: 100%;
+}
+
+.section {
+  padding: 60px 0;
+}
+
 .section-title {
   text-align: center;
+}
+
+.section-title__heading {
   text-transform: uppercase;
   font-family: 'Yeseva one', cursive;
+}
+
+.section-title__description {
+  max-width: 52rem;
+  margin: auto;
+  margin-top: 1.64rem;
+  font-family: 'Futura Book' , arial;
+  font-size: 1.07rem;
+  line-height: 135.84%;
 }
 
 .section-title__image {
@@ -631,6 +651,76 @@ body {
   color: #e3b873;
 }
 
+.types__section-title {
+  margin-bottom: 2rem;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.col {
+  -ms-flex-preferred-size: 32%;
+      flex-basis: 32%;
+}
+
+.card__image {
+  display: block;
+  width: 100%;
+  margin: auto;
+}
+
+.card__text {
+  position: relative;
+  max-width: 23.6rem;
+  margin: 0 auto;
+  margin-top: -9.3rem;
+  padding: 1.79rem 2.14rem;
+  background-color: #fff;
+  -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+          box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+}
+
+.card__title {
+  font-family: 'Yeseva One', cursive;
+  font-size: 1.29rem;
+  margin-top: 0;
+  margin-bottom: 0.7rem;
+}
+
+.card__list {
+  padding: 0 0 0 1rem;
+  margin: 0;
+  margin-bottom: 2.5rem;
+  font-size: 1.07rem;
+  line-height: 1.79rem;
+  color: #959595;
+}
+
+.card__pricetag {
+  position: absolute;
+  left: 0;
+  bottom: -1.79rem;
+  font-size: 1.29rem;
+  font-family: 'Yeseva One', cursive;
+  text-transform: uppercase;
+  background-color: #e3b873;
+  color: #ffffff;
+  padding: 1.214rem 2.6rem;
+}
+
+.design__section-title {
+  margin-bottom: 2.78rem;
+}
+
 @media screen and (max-width: 1200px) {
   html {
     font-size: 12px;
@@ -653,6 +743,24 @@ body {
 }
 
 @media screen and (max-width: 570px) {
+  .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .types__card {
+    margin-bottom: 5rem;
+  }
+  .card__text {
+    margin-left: 0;
+  }
+  .section-title {
+    max-width: 21.86rem;
+  }
   .contacts__phone {
     margin-right: 0;
     color: #ffffff;
@@ -678,6 +786,15 @@ body {
     display: block;
     min-width: 22.86rem;
     margin-bottom: 1.85rem;
+  }
+  .design {
+    background-color: #131313;
+  }
+  .design__section-title {
+    color: #ffffff;
+  }
+  .design__card {
+    margin-bottom: 5.7rem;
   }
 }
 
