add: pixel perfect for mobile and desktop version for sections type and design

--- a/practice/src/sass/_settings.sass
+++ b/practice/src/sass/_settings.sass
@@ -10,6 +10,8 @@ img
 .section
   padding: 60px 0
   &-title
+    margin: auto
+    margin-bottom: 2.35rem
     text-align: center
     &__heading
       text-transform: uppercase
