--- a/practice/src/sass/_media.sass
+++ b/practice/src/sass/_media.sass
@@ -17,6 +17,7 @@
   .row
     flex-direction: column
     align-items: center
+    justify-content: space-between
   .types
     &__card
       margin-bottom: 5rem
