--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -380,6 +380,8 @@ img {
 }
 
 .section-title {
+  margin: auto;
+  margin-bottom: 2.35rem;
   text-align: center;
 }
 
@@ -668,8 +670,8 @@ img {
 }
 
 .col {
-  -ms-flex-preferred-size: 32%;
-      flex-basis: 32%;
+  -ms-flex-preferred-size: 31.8%;
+      flex-basis: 31.8%;
 }
 
 .card__image {
@@ -692,7 +694,7 @@ img {
 .card__title {
   font-family: 'Yeseva One', cursive;
   font-size: 1.29rem;
-  margin-top: 0;
+  margin-top: -0.2rem;
   margin-bottom: 0.7rem;
 }
 
@@ -717,8 +719,159 @@ img {
   padding: 1.214rem 2.6rem;
 }
 
+.design {
+  background-color: #131313;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.design__section-title {
+  color: #ffffff;
+  margin-bottom: 2.78rem;
+}
+
+.design__card {
+  margin-bottom: 5.7rem;
+}
+
+.design__card-image {
+  display: block;
+  width: 100%;
+  margin: auto;
+}
+
+.design__card-text {
+  position: relative;
+  max-width: 23.6rem;
+  margin-top: -9.3rem;
+  padding: 1.79rem 2.14rem;
+  background-color: #fff;
+  -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+          box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+}
+
+.design__card-title {
+  font-family: 'Yeseva One', cursive;
+  font-size: 1.29rem;
+  margin-top: 0;
+  margin-bottom: 0.7rem;
+}
+
+.design__card-list {
+  padding: 0 0 0 1rem;
+  margin: 0;
+  margin-bottom: 2.5rem;
+  font-size: 1.07rem;
+  line-height: 1.79rem;
+  color: #959595;
+}
+
+.design__card-pricetag {
+  position: absolute;
+  left: 0;
+  bottom: -1.79rem;
+  font-size: 1.29rem;
+  font-family: 'Yeseva One', cursive;
+  text-transform: uppercase;
+  background-color: #e3b873;
+  color: #ffffff;
+  padding: 1.214rem 2.6rem;
+}
+
+.display-none {
+  display: none;
+}
+
+.display-yes {
+  display: inline-block;
+}
+
 .design__section-title {
   margin-bottom: 2.78rem;
+}
+
+@media screen and (min-width: 570px) {
+  .display-yes {
+    display: none;
+  }
+  .display-none {
+    display: block;
+  }
+  .design__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .design__col {
+    -ms-flex-preferred-size: 32%;
+        flex-basis: 32%;
+  }
+  .design {
+    background-color: #fff;
+    color: #131313;
+  }
+  .design__description {
+    color: #131313;
+    font-size: 1.4rem;
+    max-width: 52rem;
+  }
+  .design__section-title {
+    color: #131313;
+  }
+  .design__card-image {
+    display: block;
+    width: 100%;
+    margin: auto;
+  }
+  .design__card-text {
+    position: relative;
+    max-width: 23.6rem;
+    margin: 0 auto;
+    margin-top: -9.3rem;
+    padding: 1.79rem 2.14rem;
+    background-color: #fff;
+    -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+  }
+  .design__card-title {
+    font-family: 'Yeseva One', cursive;
+    font-size: 1.29rem;
+    margin-top: 0;
+    margin-bottom: 0.7rem;
+  }
+  .design__card-list {
+    padding: 0 0 0 1rem;
+    margin: 0;
+    margin-bottom: 2.5rem;
+    font-size: 1.07rem;
+    line-height: 1.79rem;
+    color: #959595;
+  }
+  .design__card-pricetag {
+    position: absolute;
+    left: 0;
+    bottom: -1.79rem;
+    font-size: 1.29rem;
+    font-family: 'Yeseva One', cursive;
+    text-transform: uppercase;
+    text-align: left;
+    background-color: #e3b873;
+    color: #ffffff;
+    padding: 1.214rem 5.6rem 1.214rem 2.3rem;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -751,6 +904,9 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .types__card {
     margin-bottom: 5rem;
