--- a/practice/src/sass/templates/_design.sass
+++ b/practice/src/sass/templates/_design.sass
@@ -1,3 +1,112 @@
 .design
+  background-color: $dark
+  display: flex
+  justify-content: space-between
+  align-items: center
+  &__section-title
+    color: $light 
+    margin-bottom: 2.78rem
+  &__card
+    margin-bottom: 5.7rem
+
+.design__card
+  &-image
+    display: block
+    width: 100%
+    margin: auto
+  &-text
+    position: relative
+    max-width: 23.6rem
+    margin-top: -9.3rem
+    padding: 1.79rem 2.14rem
+    background-color: #fff
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
+  &-title
+      font-family: 'Yeseva One', cursive
+      font-size: 1.29rem
+      margin-top: 0
+      margin-bottom: 0.7rem
+  &-list
+    padding: 0 0 0 1rem
+    margin: 0
+    margin-bottom: 2.5rem
+    font-size: 1.07rem
+    line-height: 1.79rem
+    color: $secondary
+  &-pricetag
+    position: absolute
+    left: 0
+    bottom: -1.79rem
+    font-size: 1.29rem
+    font-family: 'Yeseva One', cursive
+    text-transform: uppercase
+    background-color: $primary
+    color: $light
+    padding: 1.214rem 2.6rem
+.display-none
+  display: none
+.display-yes
+  display: inline-block
+.design
   &__section-title
     margin-bottom: 2.78rem
+@media screen and ( min-width: 570px )
+  .display-yes
+    display: none
+  .display-none
+    display: block
+  .design__row 
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
+  .design__col
+    flex-basis: 32%
+  .design
+    background-color: #fff
+    color: $dark
+    &__description
+      color: $dark
+      font-size: 1.4rem
+      max-width: 52rem
+    &__section-title
+      color: $dark
+    &__card
+      &-image
+        display: block
+        width: 100%
+        margin: auto
+      &-text
+        position: relative
+        max-width: 23.6rem
+        margin: 0 auto
+        margin-top: -9.3rem
+        padding: 1.79rem 2.14rem
+        background-color: #fff
+        box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
+      &-title
+          font-family: 'Yeseva One', cursive
+          font-size: 1.29rem
+          margin-top: 0
+          margin-bottom: 0.7rem
+      &-list
+        padding: 0 0 0 1rem
+        margin: 0
+        margin-bottom: 2.5rem
+        font-size: 1.07rem
+        line-height: 1.79rem
+        color: $secondary
+      &-pricetag
+        position: absolute
+        left: 0
+        bottom: -1.79rem
+        font-size: 1.29rem
+        font-family: 'Yeseva One', cursive
+        text-transform: uppercase
+        text-align: left
+        background-color: $primary
+        color: $light
+        padding: 1.214rem 5.6rem 1.214rem 2.3rem
+
+
+
+
