--- a/practice/src/sass/templates/_types.sass
+++ b/practice/src/sass/templates/_types.sass
@@ -6,7 +6,7 @@
   align-items: flex-start
   justify-content: space-between
 .col
-  flex-basis: 32%
+  flex-basis: 31.8%
 .card
   &__image
     display: block
@@ -23,7 +23,7 @@
   &__title
       font-family: 'Yeseva One', cursive
       font-size: 1.29rem
-      margin-top: 0
+      margin-top: -0.2rem
       margin-bottom: 0.7rem
   &__list
     padding: 0 0 0 1rem
