--- a/practice/src/sass/style.css
+++ b/practice/src/sass/style.css
@@ -936,6 +936,8 @@ img {
 }
 
 .modal {
+  opacity: 0;
+  visibility: hidden;
   position: fixed;
   z-index: 999999;
   left: 0;
@@ -954,6 +956,11 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.modal--visible {
+  opacity: 1;
+  visibility: visible;
 }
 
 .modal__dialog {
