--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -546,7 +546,8 @@ img {
     color: #e3b873; }
 
 .types__section-title {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  font-size: 0.95rem; }
 
 .row {
   display: flex;
@@ -554,19 +555,20 @@ img {
   justify-content: space-between; }
 
 .col {
-  flex-basis: 31.8%; }
+  flex-basis: 32.7%; }
 
 .card__image {
   display: block;
-  width: 100%;
+  height: 90%;
+  width: auto;
   margin: auto; }
 
 .card__text {
   position: relative;
   max-width: 23.6rem;
   margin: 0 auto;
-  margin-top: -9.3rem;
-  padding: 1.79rem 2.14rem;
+  margin-top: -9.1rem;
+  padding: 2rem 2.14rem;
   background-color: #fff;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
 
@@ -574,20 +576,21 @@ img {
   font-family: 'Yeseva One', cursive;
   font-size: 1.29rem;
   margin-top: -0.2rem;
-  margin-bottom: 0.7rem; }
+  margin-bottom: 0.8rem; }
 
 .card__list {
   padding: 0 0 0 1rem;
   margin: 0;
-  margin-bottom: 2.5rem;
+  margin-bottom: 2.1rem;
   font-size: 1.07rem;
-  line-height: 1.79rem;
+  line-height: 1.9rem;
   color: #959595; }
 
 .card__pricetag {
   position: absolute;
   left: 0;
   bottom: -1.79rem;
+  min-width: 228px;
   font-size: 1.29rem;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
@@ -602,7 +605,7 @@ img {
   align-items: center; }
   .design__section-title {
     color: #ffffff;
-    margin-bottom: 2.78rem; }
+    margin-bottom: 2.8rem; }
   .design__card {
     margin-bottom: 5.7rem; }
 
@@ -670,18 +673,22 @@ img {
     .design__description {
       color: #131313;
       font-size: 1.4rem;
-      max-width: 52rem; }
+      max-width: 52rem;
+      margin-top: 1.4rem;
+      margin-bottom: 3.2rem;
+      letter-spacing: 0.15px;
+      line-height: 1.4; }
     .design__section-title {
       color: #131313; }
     .design__card-image {
       display: block;
-      width: 100%;
+      width: 98%;
       margin: auto; }
     .design__card-text {
       position: relative;
       max-width: 23.6rem;
       margin: 0 auto;
-      margin-top: -9.3rem;
+      margin-top: -9.1rem;
       padding: 1.79rem 2.14rem;
       background-color: #fff;
       box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
@@ -691,16 +698,17 @@ img {
       margin-top: 0;
       margin-bottom: 0.7rem; }
     .design__card-list {
-      padding: 0 0 0 1rem;
+      padding: 0 0 0 1.5rem;
       margin: 0;
       margin-bottom: 2.5rem;
-      font-size: 1.07rem;
-      line-height: 1.79rem;
+      font-size: 1.2rem;
+      line-height: 1.81rem;
       color: #959595; }
     .design__card-pricetag {
       position: absolute;
       left: 0;
-      bottom: -1.79rem;
+      bottom: -1.4rem;
+      min-width: 228px;
       font-size: 1.29rem;
       font-family: 'Yeseva One', cursive;
       text-transform: uppercase;
@@ -724,10 +732,14 @@ img {
   display: flex;
   align-items: center;
   justify-content: center; }
+  .modal--unvisible {
+    opacity: 0;
+    visibility: hidden; }
   .modal--visible {
     opacity: 1;
     visibility: visible; }
   .modal__dialog {
+    display: block;
     position: relative;
     max-width: 36.36rem;
     background: #131313 url("../img/bg-lines.svg");
