--- a/practice/src/sass/templates/_design.sass
+++ b/practice/src/sass/templates/_design.sass
@@ -5,7 +5,7 @@
   align-items: center
   &__section-title
     color: $light 
-    margin-bottom: 2.78rem
+    margin-bottom: 2.8rem
   &__card
     margin-bottom: 5.7rem
 
@@ -68,18 +68,22 @@
       color: $dark
       font-size: 1.4rem
       max-width: 52rem
+      margin-top: 1.4rem
+      margin-bottom: 3.2rem
+      letter-spacing: 0.15px
+      line-height: 1.4
     &__section-title
       color: $dark
     &__card
       &-image
         display: block
-        width: 100%
+        width: 98%
         margin: auto
       &-text
         position: relative
         max-width: 23.6rem
         margin: 0 auto
-        margin-top: -9.3rem
+        margin-top: -9.1rem
         padding: 1.79rem 2.14rem
         background-color: #fff
         box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
@@ -89,16 +93,17 @@
           margin-top: 0
           margin-bottom: 0.7rem
       &-list
-        padding: 0 0 0 1rem
+        padding: 0 0 0 1.5rem
         margin: 0
         margin-bottom: 2.5rem
-        font-size: 1.07rem
-        line-height: 1.79rem
+        font-size: 1.2rem
+        line-height: 1.81rem
         color: $secondary
       &-pricetag
         position: absolute
         left: 0
-        bottom: -1.79rem
+        bottom: -1.4rem
+        min-width: 228px
         font-size: 1.29rem
         font-family: 'Yeseva One', cursive
         text-transform: uppercase
