--- a/practice/src/sass/templates/_types.sass
+++ b/practice/src/sass/templates/_types.sass
@@ -1,41 +1,44 @@
 .types
   &__section-title
     margin-bottom: 2rem
+    font-size: 0.95rem
 .row 
   display: flex
   align-items: flex-start
   justify-content: space-between
 .col
-  flex-basis: 31.8%
+  flex-basis: 32.7%
 .card
   &__image
     display: block
-    width: 100%
+    height: 90%
+    width: auto
     margin: auto
   &__text
     position: relative
     max-width: 23.6rem
     margin: 0 auto
-    margin-top: -9.3rem
-    padding: 1.79rem 2.14rem
+    margin-top: -9.1rem
+    padding: 2rem 2.14rem
     background-color: #fff
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
   &__title
       font-family: 'Yeseva One', cursive
       font-size: 1.29rem
       margin-top: -0.2rem
-      margin-bottom: 0.7rem
+      margin-bottom: 0.8rem
   &__list
     padding: 0 0 0 1rem
     margin: 0
-    margin-bottom: 2.5rem
+    margin-bottom: 2.1rem
     font-size: 1.07rem
-    line-height: 1.79rem
+    line-height: 1.9rem
     color: $secondary
   &__pricetag
     position: absolute
     left: 0
     bottom: -1.79rem
+    min-width: 228px
     font-size: 1.29rem
     font-family: 'Yeseva One', cursive
     text-transform: uppercase
