--- a/practice/src/sass/_grid.sass
+++ b/practice/src/sass/_grid.sass
@@ -2,4 +2,20 @@
   width: 85%
   max-width: 1256px
   margin: auto
-
+.row 
+  display: flex
+  align-items: flex-start
+  justify-content: space-between
+.col
+  &-30
+    width: 30%
+  &-40
+    width: 40%
+  &-50
+    width: 50%
+  &-55
+    width: 55%
+  &-60
+    width: 60%
+  &-70
+    width: 70%
