--- a/practice/src/sass/_interface.sass
+++ b/practice/src/sass/_interface.sass
@@ -17,6 +17,33 @@
     border: 1px solid #FFFFFF;
     background-color: transparent
     color: $light
+  &__scroll-up
+    position: fixed
+    display: flex
+    justify-content: center
+    align-items: center
+    bottom: 0
+    right: 0
+    width: 17.6rem
+    min-height: 6.92rem
+    background-color: $dark
+    font-family: 'Yeseva One', cursive
+    font-size: 0.865rem
+    letter-spacing: 0px
+    text-transform: uppercase
+    color: $light 
+    text-decoration: none
+    &:hover
+      cursor: pointer
+    &::before
+      content: ''
+      background: url('../img/scroll-down.svg') no-repeat center
+      transform: rotate(180deg);
+      width: 30px
+      height: 30px
+      border: 1px solid $primary
+      border-radius: 50%
+      margin-right: 18px
 .label
   font-size: 1.07rem
   &--light
