--- a/practice/src/sass/style.sass
+++ b/practice/src/sass/style.sass
@@ -6,10 +6,12 @@
 @import 'grid'
 @import 'templates/header'
 @import 'templates/hero'
+@import 'templates/projects'
 @import 'templates/control'
 @import 'templates/types'
 @import 'templates/design'
 @import 'templates/modal'
+@import 'templates/steps'
 
 
 @import 'media'
