--- a/practice/src/sass/templates/_design.sass
+++ b/practice/src/sass/templates/_design.sass
@@ -1,5 +1,4 @@
 .design
-  background-color: $dark
   display: flex
   justify-content: space-between
   align-items: center
@@ -7,8 +6,7 @@
     color: $light 
     margin-bottom: 2.8rem
   &__card
-    margin-bottom: 5.7rem
-
+    margin-bottom: 2.35rem  // раньше было 5.7rem. не совпадало макету  
 .design__card
   &-image
     display: block
@@ -62,8 +60,19 @@
   .design__col
     flex-basis: 32%
   .design
-    background-color: #fff
+    position: relative
+    // background-color: #fff
+    padding-bottom: 0
     color: $dark
+    &::before
+      position: absolute
+      content: ''
+      width: 100%
+      height: 48%
+      bottom: 0
+      z-index: -1
+      background-color: $dark
+
     &__description
       color: $dark
       font-size: 1.4rem
