--- a/practice/src/sass/_grid.sass
+++ b/practice/src/sass/_grid.sass
@@ -9,6 +9,8 @@
 .col
   &-30
     width: 30%
+  &-39
+    width: 39%
   &-40
     width: 40%
   &-50
@@ -17,5 +19,7 @@
     width: 55%
   &-60
     width: 60%
+  &-63
+    width: 63%
   &-70
     width: 70%
