--- a/practice/src/sass/_interface.sass
+++ b/practice/src/sass/_interface.sass
@@ -19,6 +19,7 @@
     color: $light
   &__scroll-up
     position: fixed
+    z-index: 999
     display: flex
     justify-content: center
     align-items: center
