--- a/practice/src/sass/templates/_projects.sass
+++ b/practice/src/sass/templates/_projects.sass
@@ -1,3 +1,9 @@
+.projects
+  &__title
+    &--mobile
+      display: none
+    &--desktop
+      display: block
 .swiper
   &-slide
     display: flex
