--- a/practice/src/sass/_media.sass
+++ b/practice/src/sass/_media.sass
@@ -5,6 +5,8 @@
     &__item
       margin-right: 1rem
 @media screen and ( max-width: 992px )
+  html
+    font-size: 10px
   .nav
     display: none
 
@@ -14,20 +16,84 @@
     &__content
       margin-left: 0
 @media screen and ( max-width: 570px )
+  html
+    font-size: 14px
   .row
     flex-direction: column
     align-items: center
     justify-content: space-between
+  .container
+    width: 95%
+  .col
+    &-30
+      width: 95%
+    &-50
+      width: 95%
+  .button
+    &__scroll
+      &-up
+        display: none !important
+
   .types
     &__card
       margin-bottom: 5rem
   .card
+    &__image
+      display: block
+      width: 100%
+      margin: auto
     &__text
-      margin-left: 0
+      position: relative
+      max-width: 22rem
+      margin: 0
+      margin-top: -9.1rem
+      padding: 1.79rem 2.14rem
+      background-color: #fff
+      box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
+    &-title
+      font-family: 'Yeseva One', cursive
+      font-size: 1.29rem
+      margin-top: 0
+      margin-bottom: 0.7rem
+    &-list
+      padding: 0 0 0 1rem
+      margin: 0
+      margin-bottom: 2.5rem
+      font-size: 1.07rem
+      line-height: 1.79rem
+      color: $secondary
+    &-pricetag
+      position: absolute
+      left: 0
+      bottom: -1.79rem
+      font-size: 1.29rem
+      font-family: 'Yeseva One', cursive
+      text-transform: uppercase
+      background-color: $primary
+      color: $light
+      padding: 1.214rem 2.6rem
   .section
     &-title
-      &__description
-      max-width: 21.86rem
+      text-align: center
+      &__text
+        margin: auto
+        width: 95%
+        max-width: 95%
+  .swiper
+    &-pagination2
+      left: 43% !important
+      // left: 0 !important
+      margin: auto
+    &-button
+      &-next2
+        left: 40% !important
+        margin: auto 
+      &-prev2
+        left: 25% !important
+        margin: auto 
+
+  .steps
+    display: none
   .contacts
     &__phone
       margin-right: 0
@@ -41,25 +107,121 @@
     &__scroll-down
       display: none
     &__content
-      max-width: 22.86rem
+      margin: auto
+      // max-width: 22.86rem
     &__text
       font-size: 1.29rem
       margin-bottom: 2.28rem
     &__button
       display: block
       min-width: 22.86rem
+      width: 100%
       margin-bottom: 1.85rem
+  .projects
+    &__title
+      &--mobile
+        display: block
+      &--desktop
+        display: none  
+      &-heading
+        text-align: center
+    &__text
+      width: 95%
+      margin-bottom: 2.57em
+    &__row
+      flex-direction: column-reverse
+
   .design
     background-color: $dark
     &__section-title
       color: $light 
     &__card
       margin-bottom: 5.7rem
+ 
+// Media for design section MOBILE FIRST !!!
+@media screen and ( min-width: 570px )
+  .display-yes
+    display: none
+  .display-none
+    display: block
+  .design__row 
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
+  .design__col
+    flex-basis: 32%
+  .design
+    position: relative
+    // background-color: #fff
+    padding-bottom: 0
+    color: $dark
+    &::before
+      position: absolute
+      content: ''
+      width: 100%
+      height: 48%
+      bottom: 0
+      z-index: -1
+      background-color: $dark
 
+    &__description
+      color: $dark
+      font-size: 1.4rem
+      max-width: 52rem
+      margin-top: 1.4rem
+      margin-bottom: 3.2rem
+      letter-spacing: 0.15px
+      line-height: 1.4
+    &__section-title
+      color: $dark
+    &__card
+      &-image
+        display: block
+        width: 98%
+        margin: auto
+      &-text
+        position: relative
+        max-width: 23.6rem
+        margin: 0 auto
+        margin-top: -9.1rem
+        padding: 1.79rem 2.14rem
+        background-color: #fff
+        box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
+      &-title
+          font-family: 'Yeseva One', cursive
+          font-size: 1.29rem
+          margin-top: 0
+          margin-bottom: 0.7rem
+      &-list
+        padding: 0 0 0 1.5rem
+        margin: 0
+        margin-bottom: 2.5rem
+        font-size: 1.2rem
+        line-height: 1.81rem
+        color: $secondary
+      &-pricetag
+        position: absolute
+        left: 0
+        bottom: -1.4rem
+        min-width: 228px
+        font-size: 1.29rem
+        font-family: 'Yeseva One', cursive
+        text-transform: uppercase
+        text-align: left
+        background-color: $primary
+        color: $light
+        padding: 1.214rem 5.6rem 1.214rem 2.3rem
+
+//  media for scroll-down
 @media screen and ( max-height: 520px )
   .hero
     &__scroll-down
       display: none
+   
+
+
+
+
 
 
  
