--- a/practice/src/sass/templates/_steps.sass
+++ b/practice/src/sass/templates/_steps.sass
@@ -1,41 +1,102 @@
 .steps
-  position: relative
   padding-top: 0
+  &__container
+    &--relative
+      position: relative
   &__word
     margin-bottom: 6rem
     &::after
-      margin-left: 5rem
+      width: 6.6rem
+      margin-left: 6.2rem
   &__span
     &--top
       position: absolute
-      top: -1.28rem
+      top: -2.7rem
+      left: 0
+      margin-bottom: 0rem
       font-size: 1.07rem
       text-transform: uppercase
+      letter-spacing: 0.5px
+  &__title
+    margin-top: 0
   &__heading
     margin-top: 0
-    margin-right: 3rem
+    font-size: 1.9rem
+  &__counter
+    font-family: 'Yeseva One', cursive
+    font-size: 1.3rem
+    line-height: 25px
+    text-transform: uppercase
+    letter-spacing: 0.1px
+    color: $light
+  &__step
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+    padding-top: 1.9rem
+  &__row
+    width: 100%
+    display: flex
+    justify-content: space-between
+    &:last-child
+      margin-bottom: 1rem
+  &__item
+    display: block
+    width: 18%
+    opacity: 0.5
+    margin-top: 1.6rem
+    &:hover
+      cursor: pointer
+    &-3, &-6
+      max-width: 7rem
+  .active
+    opacity: 1
+  &__point
+    font-family: 'Yeseva One', cursive
+    font-size: 1.07rem
+    line-height: 1.5rem
+    width: 1.5rem
+    text-transform: uppercase
+    display: flex
+    align-items: center
+    flex-direction: column
+    justify-content: center
+    &::after
+      // margin-top: 0.3rem
+      content: ''
+      width: 100%
+      height: 2px
+      background-color: $primary
+  &__description
+    max-width: 10rem
+    display: block
+    margin-top: 0.6rem
+    font-size: 1.07rem
+    line-height: 1.4rem
   &-slide
     &__step
       margin-top: 3.5rem
     &__space
       height: 4.35rem
     &__first
+      flex-direction: column
       p
         &:last-child
-          margin-bottom: 5.35rem
+          margin-bottom: 6.6rem
     &__navigation
       margin-top: 3rem
     &__text
-      max-width: 25rem
+      max-width: 24rem
       font-size: 1.07rem
-      line-height: 1.64rem
+      line-height: 1.8rem
       margin: 0
       margin-bottom: 1rem
     &__heading
       max-width: 12rem
+      margin-bottom: 0.7rem
       font-family: Yeseva One
       font-size: 1.07rem
-      line-height: 1.64rem
+      line-height: 1.8rem
       text-transform: uppercase
       color: $primary
     &__about
@@ -43,25 +104,7 @@
       margin-top: 0.9rem !important
       flex-direction: column
       align-items: flex-start
-    &__description
-      max-width: 10rem
-      display: block
-      font-size: 1.07rem
-      line-height: 1.4rem
-    &__number
-      font-family: 'Yeseva One', cursive
-      font-size: 1.07rem
-      line-height: 1.5rem
-      text-transform: uppercase
-      display: flex
-      align-items: center
-      flex-direction: column
-      justify-content: center
-      &::after
-        content: ''
-        width: 100%
-        height: 1px
-        background-color: $primary
+    
     &__pagination1
       font-family: 'Yeseva One', cursive
       // &:nth-child(2)
@@ -69,16 +112,16 @@
         top: 0
     &__button
       display: inline-block
-      &-prev, &-next
+      &-prev,&-next
         bottom: 0 !important
         top: auto !important
-        background-size: 42px
-        width: 42px !important
+        background-size: 48px
+        width: 48px !important
         height: 14px !important
       &::after
         display: none
       &-prev
-        left: 0
+        left: 0 !important
         background: url('../img/arrow-left.svg') no-repeat center
       &-next
         background: url('../img/arrow-right.svg') no-repeat center
@@ -104,4 +147,9 @@
       background-color: #000000 !important
       content: open-quote
   .swiper-pagination-bullet
-    margin-right: 0.8rem !important
+    margin-right: 1.1rem !important
+    &:last-child
+      margin-right: 0 !important
+    &-active
+      width: 9px
+      height: 9px
