add: animation for elemts and script for animation loading

--- a/practice/src/sass/_settings.sass
+++ b/practice/src/sass/_settings.sass
@@ -7,6 +7,8 @@ body
   font-size: 1rem
 img 
   max-width: 100%
+.disabled
+  display: none !important
 .section
   padding: 60px 0
   &--dark
@@ -15,6 +17,8 @@ img
   &-title
     margin: auto
     text-align: center
+    &--light
+      color: $light
     &--left
       text-align: left
     &__heading
