--- a/practice/src/sass/style.sass
+++ b/practice/src/sass/style.sass
@@ -1,6 +1,7 @@
 @import 'fonts'
 @import 'normalize'
 @import 'variables'
+@import 'animations'
 @import 'settings'
 @import 'interface'
 @import 'grid'
