--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -317,6 +317,58 @@ template {
 [hidden] {
   display: none; }
 
+.screwIn {
+  animation-name: screwIn;
+  animation-duration: 3s; }
+
+@keyframes screwIn {
+  from {
+    transform-origin: center;
+    transform: rotate3d(0, 0, 1, -400deg);
+    opacity: 0; }
+  80% {
+    opacity: 0.5; }
+  to {
+    transform-origin: center;
+    transform: translate3d(0, 0, 0);
+    opacity: 1; } }
+
+.slideRight {
+  animation-name: slideRight;
+  animation-duration: 2s; }
+
+@keyframes slideRight {
+  from {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0); }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0); } }
+
+.slideLeft {
+  animation-name: slideLeft;
+  animation-duration: 2s; }
+
+@keyframes slideLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0); }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0); } }
+
+.slideCenter {
+  animation-name: slideCenter;
+  animation-duration: 2s; }
+
+@keyframes slideCenter {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 1000px, 0); }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0); } }
+
 *, *:before, *:after {
   box-sizing: border-box; }
 
@@ -330,6 +382,9 @@ body {
 img {
   max-width: 100%; }
 
+.disabled {
+  display: none !important; }
+
 .section {
   padding: 60px 0; }
   .section--dark {
@@ -338,6 +393,8 @@ img {
   .section-title {
     margin: auto;
     text-align: center; }
+    .section-title--light {
+      color: #ffffff; }
     .section-title--left {
       text-align: left; }
     .section-title__heading {
@@ -437,7 +494,7 @@ img {
   font-size: 1.285rem;
   color: #ffffff;
   padding: 0.5rem 0; }
-  .input::placeholder {
+  .input--light::placeholder {
     color: #ffffff; }
 
 .policy__checkbox {
@@ -632,11 +689,12 @@ img {
   .title--primary {
     color: #e3b873; }
 
-.projects__title--mobile {
-  display: none; }
-
-.projects__title--desktop {
-  display: block; }
+.projects {
+  padding-bottom: 30rem; }
+  .projects__title--mobile {
+    display: none; }
+  .projects__title--desktop {
+    display: block; }
 
 .swiper-slide {
   display: flex;
@@ -677,6 +735,71 @@ img {
 .swiper-container-horizontal > .swiper-pagination-bullets {
   width: auto !important;
   bottom: 0 !important; }
+
+.control__section-title {
+  margin-bottom: 2.214rem;
+  margin-top: -30rem; }
+
+.control__video {
+  display: flex;
+  margin: auto;
+  margin-bottom: 4.428rem;
+  position: relative;
+  max-width: 58.357rem;
+  min-height: 31rem;
+  background: #131313 url("../img/control.jpg") center no-repeat;
+  box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15); }
+  .control__video::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); }
+
+.control__text {
+  max-width: 40.785rem;
+  margin: auto;
+  margin-bottom: 4.285rem;
+  text-align: center;
+  font-size: 1.428rem;
+  line-height: 2.4rem; }
+  .control__text::before {
+    content: '';
+    display: block;
+    margin: auto;
+    margin-bottom: 2.5rem;
+    width: 55px;
+    height: 2px;
+    background-color: #e3b873;
+    border-radius: 30px; }
+
+.control__form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 55rem;
+  margin: auto; }
+
+.control__input-group {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 30%; }
+
+.control__label {
+  margin-bottom: -7px; }
+
+.control__button {
+  padding: 1.285rem 4.7857rem; }
+
+.control__policy {
+  margin-top: 1.2rem;
+  flex-basis: 100%; }
+  .control__policy-label {
+    justify-content: center; }
+
+.video__play {
+  margin: auto;
+  position: relative; }
 
 .types__section-title {
   margin-bottom: 2rem;
