refact & add: footer and modal window

--- a/practice/src/sass/_media.sass
+++ b/practice/src/sass/_media.sass
@@ -131,6 +131,9 @@
     &__row
       flex-direction: column-reverse
 
+  .control
+    
+
   .design
     background-color: $dark
     &__section-title
