--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -496,6 +496,8 @@ img {
   padding: 0.5rem 0; }
   .input--light::placeholder {
     color: #ffffff; }
+  .input--dark {
+    color: #131313; }
 
 .policy__checkbox {
   opacity: 0;
@@ -505,7 +507,8 @@ img {
 
 .policy__label {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  font-size: 1.142rem; }
   .policy__label::before {
     content: '';
     width: 18px;
@@ -514,6 +517,14 @@ img {
     border-radius: 1px;
     margin-right: 0.64rem;
     cursor: pointer; }
+  .policy__label--center {
+    justify-content: center; }
+
+label.invalid {
+  color: tomato; }
+
+input.invalid {
+  border-bottom: tomato solid 1px; }
 
 .container {
   width: 85%;
@@ -950,14 +961,19 @@ img {
   .modal__form {
     display: flex;
     flex-direction: column; }
-  .modal__input {
+  .modal__input-group {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 3.482rem; }
-    .modal__input:last-of-type {
-      margin-bottom: 1rem; }
+  .modal__input:last-of-type {
+    margin-bottom: 1rem; }
   .modal__policy {
     margin-bottom: 2.7rem; }
   .modal__button {
     align-self: flex-end; }
+
+.label-light {
+  color: rgba(255, 255, 255, 0.5); }
 
 .steps {
   padding-top: 0; }
@@ -1104,6 +1120,50 @@ img {
     .steps .swiper-pagination-bullet-active {
       width: 9px;
       height: 9px; }
+
+.footer {
+  padding-top: 3rem;
+  background: #131313 url("../img/footer-bg.jpg") no-repeat center/cover; }
+  .footer__wrap {
+    background-color: #181818;
+    max-width: 63.07rem;
+    margin: auto;
+    margin-bottom: 3.714rem;
+    padding: 2.5rem;
+    color: #ffffff; }
+  .footer__title {
+    text-transform: uppercase;
+    font-family: 'Yeseva One', cursive;
+    font-weight: normal;
+    font-size: 1.428rem;
+    text-align: center;
+    margin-bottom: 3.214rem; }
+  .footer__form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 37.142rem;
+    margin: auto; }
+  .footer__input {
+    padding-top: 0.3rem; }
+    .footer__input-group {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 45%;
+      margin-bottom: 3.2rem; }
+      .footer__input-group--full-width {
+        flex-basis: 100%;
+        margin-bottom: 2rem; }
+  .footer__policy {
+    flex-basis: 100%;
+    margin-bottom: 3.6rem; }
+  .footer__button {
+    margin: auto;
+    padding: 1.285rem 4.785rem; }
+  .footer__menu {
+    background-color: #131313;
+    padding: 4.285rem 0;
+    width: 100%; }
 
 @media screen and (max-width: 1200px) {
   html {
