--- a/practice/src/sass/_interface.sass
+++ b/practice/src/sass/_interface.sass
@@ -59,6 +59,8 @@
   &--light
     &::placeholder
       color: $light
+  &--dark
+    color: $dark
 .policy
   &__checkbox
     opacity: 0
@@ -69,7 +71,8 @@
           background: $primary url('../img/check.svg') no-repeat center / 0.8rem      
   &__label
     display: flex
-    align-items: center 
+    align-items: center
+    font-size: 1.142rem 
     &::before
      content: ''
      width: 18px
@@ -78,3 +81,11 @@
      border-radius: 1px
      margin-right: 0.64rem
      cursor: pointer
+    &--center
+      justify-content: center
+label
+  &.invalid
+    color: tomato
+input
+  &.invalid
+    border-bottom: tomato solid 1px
