--- a/practice/src/sass/templates/_modal.sass
+++ b/practice/src/sass/templates/_modal.sass
@@ -46,10 +46,16 @@
     display: flex
     flex-direction: column
   &__input
-    margin-bottom: 3.482rem
+    &-group
+      display: flex
+      flex-direction: column
+      margin-bottom: 3.482rem
     &:last-of-type
       margin-bottom: 1rem
   &__policy
     margin-bottom: 2.7rem
   &__button
     align-self: flex-end
+.label
+  &-light
+    color: rgba($light, 0.5)
