--- a/practice/src/sass/templates/_footer.sass
+++ b/practice/src/sass/templates/_footer.sass
@@ -4,10 +4,11 @@
   &__wrap
     background-color: $black
     max-width: 63.07rem
+    // max-height: 33rem
     margin: auto
     margin-bottom: 3.714rem
-    // margin-top: -20rem
-    padding: 2.5rem
+    margin-top: -18.8rem
+    padding: 1rem  2.5rem 2.7rem
     color: $light
   &__title
     text-transform: uppercase
