--- a/practice/src/sass/style.sass
+++ b/practice/src/sass/style.sass
@@ -13,6 +13,7 @@
 @import 'templates/design'
 @import 'templates/modal'
 @import 'templates/steps'
+@import 'templates/clients'
 @import 'templates/footer'
 
 
