add: section team

--- a/practice/src/sass/templates/_clients.sass
+++ b/practice/src/sass/templates/_clients.sass
@@ -1,5 +1,6 @@
 .clients
-  padding-bottom: 30rem
+  padding-top: 1.2rem
+  padding-bottom: 2rem
   &__heading
     font-size: 1.428rem
   &__description
