--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -976,7 +976,8 @@ input.invalid {
   color: rgba(255, 255, 255, 0.5); }
 
 .steps {
-  padding-top: 0; }
+  padding-top: 0;
+  padding-bottom: 35.8rem; }
   .steps__container--relative {
     position: relative; }
   .steps__word {
@@ -1121,8 +1122,116 @@ input.invalid {
       width: 9px;
       height: 9px; }
 
+.team {
+  margin-top: -35rem; }
+  .team__heading {
+    margin-top: 1.5rem;
+    font-size: 1.4rem; }
+  .team__description {
+    margin-top: 1.2rem;
+    margin-bottom: 5.6rem;
+    font-size: 1.43rem; }
+  .team__row {
+    justify-content: center; }
+  .team__text {
+    max-width: 40.785rem;
+    margin-top: 9rem;
+    margin: auto;
+    padding-top: 3.5rem;
+    text-align: center;
+    font-size: 1.428rem;
+    line-height: 2.4rem; }
+    .team__text::before {
+      content: '';
+      display: block;
+      margin: auto;
+      margin-bottom: 1rem;
+      width: 55px;
+      height: 2px;
+      background-color: #e3b873;
+      border-radius: 30px; }
+  .team-card {
+    position: relative;
+    margin-right: 7.5rem;
+    justify-content: space-between; }
+    .team-card--first::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate(-50%, -50%);
+      width: 5rem;
+      height: 5rem;
+      z-index: 999;
+      content: '';
+      background: #e3b873 url("../img/idea.svg") no-repeat center;
+      box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5); }
+    .team-card--second::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate(-50%, -50%);
+      width: 5rem;
+      height: 5rem;
+      z-index: 999;
+      content: '';
+      background: #e3b873 url("../img/pen.svg") no-repeat center;
+      box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5); }
+    .team-card--third {
+      margin-right: 0; }
+      .team-card--third::before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(-50%, -50%);
+        width: 5rem;
+        height: 5rem;
+        z-index: 999;
+        content: '';
+        background: #e3b873 url("../img/portfolio.svg") no-repeat center;
+        box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5); }
+    .team-card__image {
+      margin-bottom: -6rem; }
+    .team-card__group {
+      display: flex;
+      justify-content: space-between;
+      margin: auto;
+      flex-direction: column;
+      text-align: center;
+      width: 85%;
+      background-color: #ffffff; }
+    .team-card__name {
+      padding-top: 1.5rem;
+      margin: 0;
+      font-family: 'Yeseva One', cursive;
+      font-weight: normal;
+      font-size: 1.285rem;
+      line-height: 1.785rem;
+      background-color: #ffffff; }
+    .team-card__role {
+      padding-top: 0.3rem;
+      padding-bottom: 1.4rem;
+      margin: 0;
+      font-weight: normal;
+      font-size: 1.285rem;
+      line-height: 1.8rem;
+      color: #959595;
+      background-color: #ffffff; }
+    .team-card__exp {
+      display: block;
+      width: 100%;
+      padding: 1rem;
+      margin: 0;
+      background-color: #e3b873;
+      font-family: 'Yeseva One', cursive;
+      font-weight: normal;
+      font-size: 0.9rem;
+      line-height: 20px;
+      text-transform: uppercase;
+      color: #ffffff; }
+
 .clients {
-  padding-bottom: 30rem; }
+  padding-top: 1.2rem;
+  padding-bottom: 2rem; }
   .clients__heading {
     font-size: 1.428rem; }
   .clients__description {
